# crypto-ai-assistant

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONVENTIONS.md  Makefile  README.md  VULTURE_CONFIG.md  crypto-monitoring-workflow.md  crypto-workflow.md  main.ps1  main.py  main.sh  monitoring_update.txt  pyproject.toml  pyrightconfig.json  quality_test_prompts.md  session_costs.json
.cursor/rules/: ai-developer.mdc
.github/workflows/: ci.yml
scripts/: dev.py  setup-dev.py  staged-check.py  trading-safety-check.py
src/: mcp_server.py
src/api/: __init__.py  client.py  enums.py  exceptions.py  models.py
src/core/: __init__.py  account.py  ai_context_generator.py  ai_integration.py  ai_quality_validator.py  config.py  config.toml  exchange.py  history.py  indicators.py  order_validator.py  orders.py  perplexity_service.py  precision_formatter.py  protection_analyzer.py  validation_service.py
src/core/indicators/: __init__.py  calculations.py  data_processor.py  display.py  service.py  support_resistance.py
src/core/perplexity/: __init__.py  analysis_generator.py  cost_tracker.py  models.py  quality_validator.py  service.py  text_analyzer.py
tests/: conftest.py  test_mcp_server.py  test_order_validator.py  test_precision_formatter.py
tests/api/: test_client.py
tests/core/: test_account.py  test_ai_context_generator.py  test_ai_integration.py  test_ai_quality_validator.py  test_config.py  test_error_handling.py  test_exchange.py  test_financial_calculations.py  test_history.py  test_indicators.py  test_indicators_display.py  test_orders.py  test_perplexity_service.py  test_protection_analyzer.py  test_validation_service.py
tests/integration/: test_cli.py
tests/property/: __init__.py  test_ai_quality_properties.py  test_trading_logic_properties.py
