[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-ai-assistant"
version = "0.1.0"
description = "AI Trading Assistant."
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "requests>=2.32.4",
    "pandas~=2.0.3",
    "bottleneck~=1.5.0",
    "numpy<2.0",
    "python-dotenv>=1.0.1",
    "python-binance",
    "loguru",
    "typer[all]",
    "toml",
    "types-toml",
    "fastapi",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "httpx",
]
dev = [
    "ruff",
    "pre-commit",
    "commitizen",
    "mypy",
    "pandas-stubs",
    "types-toml",
    "types-requests",
    "uvicorn[standard]",
]

[project.scripts]
crypto-cli = "main:app"
crypto-server = "mcp_server:run_server"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 160
show-fixes = true
src = ["src", "tests"]

[tool.ruff.lint]
# Enable Pyflakes (F), pycodestyle (E, W), flake8-bugbear (B), isort (I), and tidy-imports (TID)
select = ["E", "F", "W", "B", "I", "TID252"]
ignore = ["B008"]

# Allow ruff to automatically remove unused imports.
unfixable = []

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 98

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "pytest_mock"
ignore_missing_imports = true

[tool.poetry.dependencies]
python = "^3.11"
python-binance = "^1.0.19"
pandas = "^2.2.2"
numpy = "^1.26.4"
requests = "^2.31.0"
PyYAML = "^6.0.1"
python-dotenv = "^1.0.1"
tabulate = "^0.9.0"
bottleneck = "^1.3.8"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
pydantic = "^2.7.4"

[tool.poetry.group.dev.dependencies]
